[gd_scene load_steps=4 format=3 uid="uid://b6gjspjilh735"]

[ext_resource type="Theme" uid="uid://cxldawy7hnlku" path="res://default_theme.tres" id="1_ebj5x"]
[ext_resource type="Script" uid="uid://bvlm1ecsiiu4n" path="res://quest/ui/NewSelectUI/PartyQuestTabUI.gd" id="2_esl7e"]
[ext_resource type="PackedScene" uid="uid://cd70bafotbi8e" path="res://quest/ui/NewSelectUI/PartyQuestUI.tscn" id="3_esl7e"]

[node name="PartyQuestTabUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ebj5x")
script = ExtResource("2_esl7e")
party_quest_ui_scene = ExtResource("3_esl7e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TempPanel" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyQuestUIContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
tab_alignment = 1
clip_tabs = false
deselect_enabled = true

[node name="PartyQuestUI" parent="VBoxContainer/HBoxContainer/PartyQuestUIContainer" instance=ExtResource("3_esl7e")]
visible = false
layout_mode = 2

[node name="PartyQuestUI2" parent="VBoxContainer/HBoxContainer/PartyQuestUIContainer" instance=ExtResource("3_esl7e")]
visible = false
layout_mode = 2
metadata/_tab_index = 1
